Fixed experience bar overlap with apply filter title

--- a/Frontend/src/components/searchPage/searchArea/SearchArea.css
+++ b/Frontend/src/components/searchPage/searchArea/SearchArea.css
@@ -12,7 +12,7 @@
 
 .apply-filter .heading {
     padding: 11px 0 11px 16px;
-    margin: 4px 0 10px 0;
+    margin: 4px 0 0 0;
     background-color: #1c83fb;
     color: white;
     font-size: 20px;
@@ -33,6 +33,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     padding-right: 10px;
+    padding-top: 10px;
 }
 
 .apply-filter .experience-slider {
